--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -62,12 +62,30 @@
 		</dependency>
 		
 		
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-client -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-oauth2-client</artifactId>
+    <version>3.2.2</version>
+</dependency>
+
+		
+		
 		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
 <dependency>
     <groupId>io.jsonwebtoken</groupId>
     <artifactId>jjwt</artifactId>
     <version>0.12.5</version>
 </dependency>
+
+<dependency>
+	<groupId>io.jsonwebtoken</groupId>
+	<artifactId>jjwt-api</artifactId>
+	<version>0.11.2</version>
+</dependency>
+<!-- Thanks for using https://jar-download.com -->
+
 <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson -->
 <dependency>
     <groupId>io.jsonwebtoken</groupId>
@@ -83,6 +101,8 @@
     <scope>runtime</scope>
 </dependency>
 
+
+
 		<dependency>
 			<groupId>com.example</groupId>
 			<artifactId>SimpleSpringBoot</artifactId>
@@ -93,6 +113,39 @@
 			<artifactId>e-pds</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		
+		
+		<dependency>
+<groupId>com.razorpay</groupId>
+<artifactId>razorpay-java</artifactId>
+<version>1.4.3</version>
+</dependency>
+<dependency>
+<groupId>org.springdoc</groupId>
+<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+<version>2.1.0</version>
+</dependency>
+<dependency>
+<groupId>com.google.api-client</groupId>
+<artifactId>google-api-client</artifactId>
+<version>1.32.1</version>
+<!--  Replace with the latest version available  -->
+</dependency>
+<dependency>
+<groupId>com.google.http-client</groupId>
+<artifactId>google-http-client-jackson2</artifactId>
+<version>1.32.1</version>
+<!--  Replace with the latest version available  -->
+</dependency>
+
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <scope>runtime</scope>
+</dependency>
+
+
+
 	</dependencies>
 
 	<build>
