--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -7,3 +7,26 @@ spring.datasource.password=mysqldbt@1
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.profiles.active=dev
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+
+#
+#spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:twitter}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=${DB_USERNAME:root}
+#spring.datasource.password=${DB_PASSWORD:$9033}
+
+
+
+#
+#spring.security.oauth2.client.registration.google.client-id=961098686120-p4pulrerjjelk6bhsbegd84m4r4mbdk7.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.google.client-secret=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
+
+
+
+
+razorpay.api.key       =     rzp_test_kTsRSaDC8hwztX
+razorpay.api.secret  =    LieoD1s9mxMIv569PcgRDMcU
+
